
	* Asterisk 12.7.1 Released.

	* AST-2014-012: Fix error with mixed address family ACLs.

	  Prior to this commit, the address family of the first item in an ACL
	  was used to compare all incoming traffic. This could lead to traffic
	  of other IP address families bypassing ACLs.

	  ASTERISK-24469 #close
	  Reported by Matt Jordan

	* AST-2014-018 - func_db: DB Dialplan function permission escalation
	  via AMI.

	  The DB dialplan function when executed from an external protocol
	  (for instance AMI), could result in a privilege escalation.

	  Asterisk now inhibits the DB function from being executed from an
	  external interface if the live_dangerously option is set to no.

	  ASTERISK-24534
	  Reported by: Gareth Palmer
	  patches: submitted by Gareth Palmer (license 5169)

2014-11-10  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.7.0 Released.

2014-11-07  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.7.0-rc2 Released.

2014-11-06 09:05 +0000 [r427382]  Corey Farrell <git@cfware.com>

	* Fix unintential memory retention in stringfields.

	  * Fix missing / unreachable calls to
	    __ast_string_field_release_active.
	  * Reset pool->used to zero when the current pool->active reaches
	    zero.

	ASTERISK-24307 #close
	Reported by: Etienne Lessard
	Tested by: ibercom, Etienne Lessard
	Review: https://reviewboard.asterisk.org/r/4114/

2014-11-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.7.0-rc1 Released.

2014-11-03 17:54 +0000 [r427129]  Richard Mudgett <rmudgett@digium.com>

	* res/res_pjsip.c, configs/pjsip.conf.sample,
	  res/res_pjsip/config_system.c, UPGRADE.txt: res_pjsip: Add
	  disable_tcp_switch option. When a packet exceeds the MTU,
	  pjproject will switch from UDP to TCP. In some circumstances (on
	  some networks), this can cause some issues with messages not
	  getting sent to the correct destination - and can also cause